# rust_bitcoin_app

./: .gitignore  Cargo.toml  README.md
src/: crpyto_price.rs  main.rs
ui/: appwindow.slint
