[package]
name = "btc-gui"
version = "0.1.0"
authors = ["David Bennett <david.a.bennett7@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.4"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rust_decimal = "1.35.0"

[build-dependencies]
slint-build = "1.4"
